# sat_hub

./: .gitignore  .gitmodules  README.md  TODO  TODO.txt  _test.py  arguments.py  config.toml  dev.ps1  dev.sh  geotiff_reader.html  main.py  requirements.txt  setup_env.py  test.py  test.sh  testing.bat
html/: html_server.py
html/templates/: index.jinja
libs/base_geotiff_reader/: setup.py
libs/base_geotiff_reader/geotiff_reader/: _index.py  map_server.py
libs/geotiff_s3_lib/: Cargo.toml
libs/geotiff_s3_lib/src/: lib.rs
libs/sat_hub_lib/: Cargo.toml  pyproject.toml
libs/sat_hub_lib/src/: lib.rs
libs/sat_img_lib/: .gitignore  setup.py
libs/sat_img_lib/src/: lib.cpp
libs/sat_img_processing/: Cargo.toml
libs/sat_img_processing/src/: lib.rs
libs/stype_img_convert/: Cargo.toml
libs/stype_img_convert/src/: lib.rs  main.rs
products/: baseproducts.py
products/extension/: gprox.py
products/geotiff/: basetype_geotiff.py
products/geotiff/s3/: esaworldcover.py
products/sentinel/: basetype_sent.py  corine_landcover.py  landcover.py  vis.py
sat_product/: base_type.py  baseproduct.py  basesat.py  gprox.py  stemp.py  stype.py  vis.py
sat_product/extension/: gprox.py
sat_product/geotiff/: basetype_geotiff.py
sat_product/sentinel/: basetype_sent.py  corine_landcover.py  gprox.py  landcover.py  rgb.py  stemp.py  stype.py  vis.py
sat_type/: base_type.py  stype.py
sat_types/: stype.py
scripts/: dev.ps1  dev.sh  requirements.txt  test.ps1
utils/: arguments.py  functions.py  simple_lib.py
utils/geotiff/: geotiff_lib.py  simplecache.py
(+12 files in other folders)
