[package]
name = "sat_hub_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sat_hub_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
gdal = {version="0.17.1" ,features = ["bindgen"]}
tiff = "0.9.1"
